
  [ Gary Lasker ]
  * softwarecenter/app.py,
    softwarecenter/view/viewswitcher.py:
    - persist the state of the "Get Software" node expansion
      between sessions (LP: #552307)

  [ Michael Vogt ]
  * softwarecenter/backend/aptd.py:
    - run a-x-i when channels are added/removed
  * softwarecenter/view/viewswitcher.py:
    - fix UI glitch when new channels are found

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 31 Mar 2010 11:08:23 +0200

software-center (1.1.22) lucid; urgency=low

  * softwarecenter/db/update.py:
    - fix crash when locale is not supported
  * apt-xapian-index-plugin/*.py:
    - fix deprecation warnings (LP: #548665)
  * merged lp:~gary-lasker/software-center/channel-reloads, many
    thanks!
  * when the sources.list changes, detect that and update the list
    dynamically (software-center-non-applications spec)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 30 Mar 2010 16:50:34 +0200

software-center (1.1.21) lucid; urgency=low

  * merged from lp:~vish.../software-center/3newicons, 
    many thanks
  * softwarecenter/view/catview.py:
    - fix icon size in sub-categories to match icon theme size
  * softwarecenter/view/catview.py:
    - fix another i18n issue with the translated categories,
      thanks to Ricardo Pérez López for noticing it (LP: #545102)
  * debian/control:
    - depend on latest aptdaemon to handle the cache when the dpkg
      journal is dirty
  * softwarecenter/backend/aptd.py:
    - ensure unused dependency removal (for direct dependencies only)
      via aptdaemon

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Mar 2010 10:18:49 +0100

software-center (1.1.21) UNRELEASED; urgency=low

  * softwarecenter/db/update.py:
    - fix crash when locale is not supported
  * apt-xapian-index-plugin/*.py:
    - fix deprecation warnings (LP: #548665)
  * merge branch from michaelforrest that does not empty box
    for unavailalbe screenshots
  * allow enabling components via "Use this source" button when